--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Webpack tutorial</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>My React App</title>
 </head>
 <body>
-<h1>Hello webpack!</h1>
+    <div id="root"></div>
 </body>
 </html>
